# noptiera

./: .gitignore  README.md  agent.py  bot.py  cli.py  mcp_server.py  pyproject.toml
pipeline/: embedder.py  ingest.py  llm.py  parser.py  search.py  store.py
